samples/_failures_safe/1761249919_9d558f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_47d0e4d5.c: In function ‘main’:
./samples/SAFE/__tmp_47d0e4d5.c:155:5: error: expected declaration or statement at end of input
  155 |     printf("Original: %s\n", original.data);
      |     ^~~~~~
